<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ultimate Fit mvvm</string>
    <string name="app_logo">App Logo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_tab_workout">Workouts</string>
    <string name="title_tab_plan">Plan</string>
    <string name="action_add_plan">Create New Plan</string>
    <string name="form_plan_name">Name</string>
    <string name="form_plan_goal">Goal</string>
    <string name="form_plan_num_of_week">Number of week</string>
    <string name="form_plan_day_per_week">No. of days per week</string>
    <string name="cd_save_plan">Save Plan</string>
    <string name="save_button">Save</string>
    <string name="plan_add_message">Success!</string>
    <string name="add_plan_label">Add Plan</string>
    <string name="button_apply_plan">Apply</string>

    <string name="alert_message">There is no internet connection. Application only can display whatever has loaded previously.</string>
    <string name="alert_title">No Internet</string>
    <string name="alert_button">OK</string>
    <string name="title_activity_workout">Workout</string>
    <string name="day_number">Day Number:</string>
    <string name="body_part">Body Part(s):</string>
    <string name="title_activity_category">Category</string>
    <string name="reps">Reps:</string>
    <string name="set">Set:</string>
    <string name="text_view_set">Set:</string>
    <string name="button_generate_sets">Generate Sets</string>
    <string name="text_view_weight">Weight:</string>
    <string name="title_activity_workout_exercise2">Workout\'s Exercises</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_exercises">Exercise(s):</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view_instruction">Instruction:</string>
    <string name="text_instruction">1. Sit on an exercise bench with back support and hold two dumbbells in front of you at about upper chest level with your palms facing your body and your elbows bent. Tip: Your arms should be next to your torso. The starting position should look like the contracted portion of a dumbbell curl.r 2. Now to perform the movement, raise the dumbbells as you rotate the palms of your hands until they are facing forward.r 3. Continue lifting the dumbbells until your arms are extended above you in straight arm position. Breathe out as you perform this portion of the movement.r 4. After a second pause at the top, begin to lower the dumbbells to the original position by rotating the palms of your hands towards you. Tip: The left arm will be rotated in a counter clockwise manner while the right one will be rotated clockwise. Breathe in as you perform this portion of the movement.r 5. Repeat for the recommended amount of repetitions.</string>
    <string name="warning_one_exercise">Need to have at least 1 exercise!</string>
    <string name="button_upload">Upload</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="remind_login">Please login to sync available plans</string>

    <string name="facebook_application_id" translatable="false">1304302136326339</string>
    <!-- Facebook Application ID, prefixed by 'fb'.  Enables Chrome Custom tabs. -->
    <string name="facebook_login_protocol_scheme" translatable="false">fb1304302136326339</string>
    <string name="cd_plan_name">Plan\'s name</string>
    <string name="cd_plan_goal">Plan\'s goal</string>
    <string name="cd_number_of_week">Number of week</string>
    <string name="cd_toggle_navigation">Toggle navigation</string>
    <string name="cd_workout_exercise_number_of_set">Workout Exercise number of set</string>
    <string name="cd_workout_exercise_number_of_rep">workout exercise number of rep</string>
    <string name="cd_add_new_workout_exercise">add new workout exercise</string>
    <string name="cd_add_new_exercise">add new exercise</string>
    <string name="cd_rep_per_set">number of rep per set</string>
    <string name="cd_weight_for_this_set">amount of weight for this set</string>
    <string name="cd_account_information">Account information</string>
    <string name="cd_appwidget_day">Day number</string>
    <string name="add_widget">Add widget</string>
    <string name="cd_appwidget_body_part">Body part</string>
    <string name="cd_exercise_start">exercise start</string>
    <string name="cd_exercise_end">exercise end</string>
    <string name="cd_category_image">category image</string>
    <string name="cd_exercise_image">exercise image</string>
    <string name="cd_on_going_mark">on going mark</string>
    <string name="cd_workout_exercise_image">workout exercise image</string>
    <string name="toast_signed_in">Signed in!</string>
    <string name="toast_sign_in_cancel">Sign in canceled</string>
    <string name="toast_enter_plan_name">Please enter Plan\'s name</string>
    <string name="toast_enter_plan_goal">Please enter Plan\'s goal</string>
    <string name="toast_enter_plan_no_of_week">Please enter Plan\'s number of weeks</string>
    <string name="toast_enter_days_per_week">Please enter Plan\'s number of days per week</string>
    <string name="toast_plan_uploaded">Plan uploaded</string>
    <string name="toast_sign_in_to_upload">Please sign-in to upload the plan</string>
    <string name="cd_add_category">add category</string>
    <string name="format_set"><xliff:g id="set">%d</xliff:g></string>
    <string name="text_view_day">Day: </string>
    <string name="text_view_creator">Creator: </string>
    <string name="text_view_goal">Goal: </string>
    <string name="text_view_week"> week</string>
    <string name="text_view_super_set">Super Set</string>
    <string name="text_view_giant_set">Giant Set</string>
    <string name="text_view_one_rep_max">One Rep Max:</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="pref_unit_label">Unit</string>
    <string name="pref_unit_key" translatable="false">units</string>
    <string name="pref_unit_kg">kg</string>
    <string name="pref_unit_lbs">lbs</string>
    <string name="pref_orm_manual_input_key" translatable="false">pref_orm_input</string>
    <string name="pref_orm_manual_input_label">ORM Manual Input</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_is_pt_key" translatable="false">is_pt</string>
    <string name="pref_is_pt_label">Personal Trainer Mode</string>
    <string name="pref_is_weight_manually_input_key" translatable="false">weight_manual</string>
    <string name="pref_is_weight_manually_input_label">User manually input weight</string>
    <string name="pref_allow_sync_key">allow_sync</string>
    <string name="pref_allow_sync_label">Allow to sync plan from server</string>
    <string name="text_view_target">Target:</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="button_done">Done</string>
    <string name="menu_item_note">Note</string>
    <string name="button_save">Save</string>
    <string name="menu_item_calculate_orm">Find ORM</string>
    <string name="text_view_orm">ORM: </string>
    <string name="button_calculate">Calculate</string>
    <string name="nav_view_item_sync_plan">Sync Plan</string>
    <string name="toast_synced">Synced!</string>
</resources>
