<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_unit_label"
        android:key="@string/pref_unit_key"
        android:defaultValue="@string/pref_unit_kg"
        android:entryValues="@array/pref_unit_values"
        android:entries="@array/pref_unit_options" />

    <SwitchPreference
        android:key="@string/pref_orm_manual_input_key"
        android:title="@string/pref_orm_manual_input_label"
        android:defaultValue="true" />

    <SwitchPreference
        android:key="@string/pref_is_pt_key"
        android:title="@string/pref_is_pt_label"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="@string/pref_is_weight_manually_input_key"
        android:title="@string/pref_is_weight_manually_input_label"
        android:defaultValue="false" />

    <SwitchPreference
        android:key="@string/pref_allow_sync_key"
        android:title="@string/pref_allow_sync_label"
        android:defaultValue="true" />

</PreferenceScreen>
