<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_view_item_login"
            android:icon="@drawable/login"
            android:title="@string/login"
            android:visible="true" />

        <item
            android:id="@+id/navigation_view_item_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:visible="false" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_view_item_setting"
            android:icon="@drawable/settings"
            android:title="@string/action_settings"
            android:visible="true" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_view_item_sync"
            android:icon="@drawable/sync"
            android:title="@string/nav_view_item_sync_plan"
            android:visible="true" />
    </group>
</menu>
