<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">


    <TextView
        android:id="@+id/text_view_set_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dumbbell Fly" />

    <TextView
        android:id="@+id/text_view_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reps"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edit_text_set_rep"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/custom_edit_text"
        android:contentDescription="@string/cd_rep_per_set"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/edit_text_set_weight"
        android:nextFocusRight="@+id/edit_text_set_weight"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintLeft_toRightOf="@id/text_view_reps"
        tools:text="0" />

    <TextView
        android:id="@+id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/text_view_weight"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintLeft_toRightOf="@id/edit_text_set_rep" />

    <EditText
        android:id="@+id/edit_text_set_weight"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/custom_edit_text"
        android:contentDescription="@string/cd_weight_for_this_set"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal"
        android:maxLength="6"
        android:nextFocusLeft="@+id/edit_text_set_rep"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintLeft_toRightOf="@id/text_view_weight"
        tools:text="120.55" />

    <TextView
        android:id="@+id/text_view_label_orm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_view_orm"
        app:layout_constraintStart_toEndOf="@+id/text_view_set_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_orm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/text_view_label_orm"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="120" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />
</android.support.constraint.ConstraintLayout>