<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ultimate.fit.ultimatefit.fragment.ExerciseFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/text_view_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dumbbell Chest Press" />

    <ImageView
        android:id="@+id/image_view_exercise_1"
        android:layout_width="@dimen/image_view_exercise_width"
        android:layout_height="@dimen/image_view_exercise_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_exercise_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_exercise_name"
        app:srcCompat="@drawable/floor_press_1" />

    <ImageView
        android:id="@+id/image_view_exercise_2"
        android:layout_width="@dimen/image_view_exercise_width"
        android:layout_height="@dimen/image_view_exercise_height"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/cd_exercise_end"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_exercise_name"
        app:srcCompat="@drawable/floor_press_2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_view_instruction"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_exercise_1" />

    <TextView
        android:id="@+id/text_view_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:maxLines="10"
        android:scrollbars="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="@string/text_instruction" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/text_view_one_rep_max"
        app:layout_constraintRight_toLeftOf="@+id/edit_text_one_rep_max"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_one_rep_max"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="52dp"
        android:inputType="numberDecimal"
        android:maxLength="6"
        app:layout_constraintRight_toLeftOf="@+id/text_view_unit"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="100" />

    <TextView
        android:id="@+id/text_view_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/unit_kg"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
