<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginTop="4dp"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textViewWorkoutExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Dumbbell Fly" />

    <TextView
        android:id="@+id/text_view_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/set"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWorkoutExerciseName"
        app:layout_constraintVertical_bias="0.272" />

    <EditText
        android:id="@+id/edit_text_workout_exercise_set"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:contentDescription="@string/cd_workout_exercise_number_of_set"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/edit_text_workout_exercise_rep"
        app:layout_constraintLeft_toRightOf="@id/text_view_set"
        app:layout_constraintTop_toBottomOf="@id/textViewWorkoutExerciseName"
        tools:text="0" />

    <TextView
        android:id="@+id/text_view_rep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:text="@string/reps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/edit_text_workout_exercise_set"
        app:layout_constraintTop_toBottomOf="@id/textViewWorkoutExerciseName"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/edit_text_workout_exercise_rep"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edit_text"
        android:contentDescription="@string/cd_workout_exercise_number_of_rep"
        android:gravity="center_horizontal"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="3"
        android:nextFocusForward="@+id/edit_text_workout_exercise_set"
        app:layout_constraintLeft_toRightOf="@id/text_view_rep"
        app:layout_constraintTop_toBottomOf="@id/textViewWorkoutExerciseName"
        tools:text="0" />

    <ImageView
        android:id="@+id/imageViewWorkoutExerciseImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/cd_workout_exercise_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>